--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -16,6 +16,12 @@ header {
     height: 75%;
     
 }
+.width-add {
+    width: 150px !important;
+}
+.margin-add {
+    margin-top: 150px;
+}
 .nav {
     display: flex;
     height: 100px;
@@ -26,7 +32,8 @@ header {
     // styles for the haburger transformation 
     .ham-container {
         display: inline-block;
-        position: relative;
+        position: sticky;
+        z-index: 3;
        
         .line1, .line2, .line3 {
             width: 40px;
@@ -38,15 +45,20 @@ header {
         }
         .transition-line1 {
             transform: rotate(-45deg) translate(-7px, 6px); 
-          }
+        }
           
-          .transition-line2 {
-             opacity: 0;
-          }
-          .transition-line3 {
-            transform: rotate(45deg) translate(-8px, -8px);
-          }
+        .transition-line2 {
+            opacity: 0;
+        }
+        .transition-line3 {
+        transform: rotate(45deg) translate(-8px, -8px);
+        }
+        
     }
+    .ham-up {
+        margin-top: -155px;
+    }
+   
 
 }
 .nav-ul {
@@ -70,21 +82,25 @@ header {
    }
 }
 .menu-ul {
-    position: absolute;
-    top: 60px; 
-    left: 10px;
     background-color: $color-bg-light;
     z-index: 2;
-    padding: 10px;
+    // padding: 10px;
     border-radius: 5px;
+    overflow-x: hidden;
+    top: 0; 
+    left: 0;
+    position: absolute;
+    margin-left: 100px;
+    width: 0;
     li {
         font-family: $font-stack;
-        margin-top: 10px; 
+        margin-top: 8px; 
            a {
                color: black;
                text-decoration: none;
                font-size: 18px;
                letter-spacing: 1px;
+               
                &:hover {
                 border-bottom: 2px solid $color-accent-com;
             }
@@ -249,7 +265,7 @@ header {
 
 // ******** About Section *********
 .about {
-    width: 90%;   
+    width: 95%;   
     margin: 20px auto;
     background-color: $color-bg-accent-light;
     border-radius: 10px;
@@ -261,11 +277,11 @@ header {
     justify-content: space-between;
 }
 .about-text{
-    max-width: 90%;
+    max-width: 95%;
 }
 .wayne {
     border-radius: 10%;
-    max-height: 90%;
+    max-height: 95%;
     max-width: 300px;
  
 }
